<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/verificationTitle"
        android:layout_width="253dp"
        android:layout_height="0dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="137dp"
        android:layout_marginBottom="28dp"
        android:paddingBottom="12dp"
        android:text="@string/enter_verification_code"
        android:textAlignment="center"
        android:textColor="#0E249C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/verificationInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/verificationInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="54dp"
        android:hint="@string/verification_code"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/verifyButton"
        app:layout_constraintEnd_toEndOf="@+id/verificationTitle"
        app:layout_constraintStart_toStartOf="@+id/verifyButton"
        app:layout_constraintTop_toBottomOf="@+id/verificationTitle" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="339dp"
        android:backgroundTint="#186B1B"
        android:text="@string/verify"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationInput" />

</androidx.constraintlayout.widget.ConstraintLayout>