<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Scrollable Content -->
    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="374dp"
        android:layout_height="541dp"
        android:layout_above="@id/backBtn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Course Code -->

            <!-- Course Name -->

            <!-- Attendance -->

            <!-- Grade -->

            <!-- Instructor -->
            <androidx.cardview.widget.CardView
                android:id="@+id/detailCard"
                android:layout_width="356dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="#FFFFFF"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="329dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="18dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/courseCodeText"
                            android:layout_width="163dp"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:paddingBottom="8dp"
                            android:text="@string/course_code"
                            android:textColor="#AC013B"
                            android:textSize="24sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/course_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="329dp"
                        android:layout_height="80dp"
                        android:layout_marginBottom="19dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                        <TextView
                            android:id="@+id/courseNameText"
                            android:layout_width="163dp"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:paddingBottom="8dp"
                            android:text="@string/course_name"
                            android:textColor="#AC013B"
                            android:textSize="24sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/course_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="329dp"
                        android:layout_height="80dp"
                        android:layout_marginBottom="19dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                        <TextView
                            android:id="@+id/attendanceText"
                            android:layout_width="163dp"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:paddingBottom="8dp"
                            android:text="@string/attendance"
                            android:textColor="#AC013B"
                            android:textSize="24sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/attendance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="329dp"
                        android:layout_height="80dp"
                        android:layout_marginBottom="18dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                        <TextView
                            android:id="@+id/gradeText"
                            android:layout_width="163dp"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:paddingBottom="8dp"
                            android:text="@string/grade"
                            android:textColor="#AC013B"
                            android:textSize="24sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/grade"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="329dp"
                        android:layout_height="80dp"
                        android:layout_marginBottom="1dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                        <TextView
                            android:id="@+id/instructorText"
                            android:layout_width="163dp"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/instructor"
                            android:textColor="#AC013B"
                            android:textSize="24sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/instructor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textSize="20sp" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <!-- Back Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#CC1654"
        android:text="@string/back"
        android:textColor="@android:color/white"
        app:cornerRadius="16dp"
        app:icon="@drawable/arrow_back"
        app:iconPadding="8dp"
        app:iconTint="@android:color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="381dp"
        android:layout_height="61dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/courseDetail"
        android:textColor="#AC013B"
        android:textSize="34sp"
        android:textStyle="bold" />

</RelativeLayout>
